<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FirstKotlinProject</string>
    <string name="next_activity">Next activity</string>
    <string name="back">Back</string>
    <string name="avengers">Avengers:</string>
    <string name="end_game">End Game</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="_125_reviews">%d REVIEWS</string>
    <string name="movies_list_film_time">%d MIN</string>
    <string name="_38_reviews">38 Reviews</string>
    <string name="_98_reviews">98 Reviews</string>
    <string name="_74_reviews">74 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="story">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_list">Movie list</string>
    <string name="_13">%d+</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="ww_1984">Wonder Woman 1984</string>
    <string name="black_widow">Black Widow</string>
    <string name="tenet">Tenet</string>
    <string name="_137_min">137 min</string>
    <string name="_120_min">120 min</string>
    <string name="_102_min">102 min</string>
    <string name="_97_min">97 min</string>
    <string name="_16">16+</string>
    <string name="action_sci_fi_thriller">Action, Sci-Fi, Thriller</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="action_adventure_sci_fi">Action, Adventure, Sci-Fi</string>

</resources>