<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".moviedetails.FragmentMoviesDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_left_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_right_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            android:foreground="@drawable/mask"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/back_button_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:gravity="center_vertical|start"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button_arrow_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                app:srcCompat="@drawable/ic_path"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/back_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/back"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/yearsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/background"
            android:gravity="center"
            tools:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movie_name_text"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toTopOf="@+id/imageDetail" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_text" />

        <ImageView
            android:id="@+id/detailStar1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="@+id/detailReviews"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toTopOf="@+id/detailReviews"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/detailStar2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="@+id/detailStar1"
            app:layout_constraintStart_toEndOf="@+id/detailStar1"
            app:layout_constraintTop_toTopOf="@+id/detailStar1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/detailStar3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="@+id/detailStar1"
            app:layout_constraintStart_toEndOf="@+id/detailStar2"
            app:layout_constraintTop_toTopOf="@+id/detailStar1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/detailStar4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="@+id/detailStar1"
            app:layout_constraintStart_toEndOf="@+id/detailStar3"
            app:layout_constraintTop_toTopOf="@+id/detailStar1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/detailStar5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_star_grey"
            app:layout_constraintBottom_toBottomOf="@+id/detailStar1"
            app:layout_constraintStart_toEndOf="@+id/detailStar4"
            app:layout_constraintTop_toTopOf="@+id/detailStar1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/detailReviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/_125_reviews"
            android:textAllCaps="true"
            android:textColor="#6D6D80"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/detailStar5"
            app:layout_constraintTop_toBottomOf="@+id/tag"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/detailReviews" />

        <TextView
            android:id="@+id/detailStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/story"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/detailStory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/heading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>