<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".FragmentMovieList"
    android:background="@color/background">


    <FrameLayout
        android:id="@+id/movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg"
        android:clickable="true"
        >


        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="166dp"
            android:layout_height="248dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:layout_alignParentTop="true"
            >
            <ImageView
                android:id="@+id/ivMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/avengers"
                android:foreground="@drawable/mask_new"
                />

            <RelativeLayout
                android:id="@+id/pg"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="6dp"
                >
                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/rectangle" />

                <TextView
                    android:id="@+id/tvYears"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="1dp"
                    android:fontFamily="@font/roboto_black"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_13"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pg123"
                android:layout_width="16dp"
                android:layout_height="14dp"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="144dp"
                android:layout_marginRight="6dp"
                >

                <ImageView
                    android:id="@+id/ivHeart"
                    android:layout_width="16sp"
                    android:layout_height="14sp"
                    app:srcCompat="@drawable/ic_baseline_favorite_24"
                    android:alpha="0.75"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/tagline"
                android:layout_width="147dp"
                android:layout_height="12dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="214dp"
                >

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="147dp"
                    android:layout_height="12dp"
                    android:textSize="8sp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/pink"
                    android:text="@string/tag" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/reviews"
                android:layout_width="107dp"
                android:layout_height="12dp"
                android:layout_marginRight="53dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="228dp"
                android:layout_marginBottom="8dp"
                >

                <ImageView
                    android:id="@+id/ivStar1"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_baseline_star_rate_24" />
                <ImageView
                    android:id="@+id/ivStar2"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/ic_baseline_star_rate_24" />
                <ImageView
                    android:id="@+id/ivStar3"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    app:srcCompat="@drawable/ic_baseline_star_rate_24" />
                <ImageView
                    android:id="@+id/ivStar4"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                <ImageView
                    android:id="@+id/ivStar5"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    app:srcCompat="@drawable/ic_star_grey" />

                <TextView
                    android:id="@+id/tvReviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:paddingLeft="3dp"
                    android:fontFamily="@font/roboto_black"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/_125_reviews"
                    android:textColor="#6D6D80"
                    android:textSize="8sp" />
            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/name_min"
            android:layout_width="154dp"
            android:layout_height="32dp"
            android:layout_marginTop="256dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"

            >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="138dp"
                android:layout_height="20dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/avengers_end_game"
                android:textColor="@color/white_grey" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="154dp"
                android:layout_height="12dp"
                android:layout_below="@+id/tvName"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/roboto_black"
                android:gravity="center_vertical"
                android:text="@string/_137_min"
                android:textSize="8sp"
                android:textColor="@color/grey"
                android:textStyle="normal" />
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>

